Progress on physics animations

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,13 @@
       {% endfor %}
     {% endif %}
 
+      {% if page.custom_css %}
+      {% for stylesheet in page.custom_css %}
+      <link rel="stylesheet" href="{{ site.baseurl }}/{{ stylesheet }}" media="screen" type="text/css">
+      {% endfor %}
+      {% endif %}
+
+
     {% if layout.custom_js %}
       {% for js_file in layout.custom_js %}
       <script src='{{ site.baseurl }}/{{ js_file }}' type="text/javascript"></script>
@@ -39,7 +46,14 @@
       {% endfor %}
     {% endif %}
 
-    <script src="{{ site.baseurl }}/assets/js/custom.js"></script>
+      <script src="{{ site.baseurl }}/assets/js/custom.js"></script>
+
+    {% if page.custom_js %}
+      {% for js_file in page.custom_js %}
+      <script src='{{ site.baseurl }}/{{ js_file }}' type="text/javascript"></script>
+      {% endfor %}
+    {% endif %}
+
 
   </head>
   <body>
