Use cdn webppl, viz, editor

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,26 +27,34 @@
       <link rel="stylesheet" href="{{ site.baseurl }}/{{ stylesheet }}" media="screen" type="text/css">
       {% endfor %}
     {% endif %}
-
-      {% if page.custom_css %}
+    {% if layout.external_css %}
+      {% for stylesheet in layout.external_css %}
+      <link rel="stylesheet" href="{{ stylesheet }}" media="screen" type="text/css">
+      {% endfor %}
+    {% endif %}
+    {% if page.custom_css %}
       {% for stylesheet in page.custom_css %}
       <link rel="stylesheet" href="{{ site.baseurl }}/{{ stylesheet }}" media="screen" type="text/css">
       {% endfor %}
-      {% endif %}
+    {% endif %}
 
 
+    <script src="{{ site.baseurl }}/assets/js/custom.js"></script>
     {% if layout.custom_js %}
       {% for js_file in layout.custom_js %}
       <script src='{{ site.baseurl }}/{{ js_file }}' type="text/javascript"></script>
       {% endfor %}
-      {% endif %}
+    {% endif %}
+    {% if layout.external_js %}
+      {% for js_file in layout.external_js %}
+      <script src='{{ js_file }}' type="text/javascript"></script>
+      {% endfor %}
+    {% endif %}
     {% if layout.custom_jsx %}
       {% for jsx_file in layout.custom_jsx %}
       <script src='{{ site.baseurl }}/{{ jsx_file }}' type="text/jsx"></script>
       {% endfor %}
     {% endif %}
-
-      <script src="{{ site.baseurl }}/assets/js/custom.js"></script>
 
     {% if page.custom_js %}
       {% for js_file in page.custom_js %}
