Save work on citations

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,8 @@
       {% endfor %}
     {% endif %}
 
-    <script src="{{ site.baseurl }}/assets/js/custom.js"></script>
+      <script src="{{ site.baseurl }}/assets/js/parse-bibtex.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/main.js"></script>
 
   </head>
   <body>
