Make title background green

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,7 +3,7 @@
     text-align: center;
     margin: 0em -5em 1em -5em;
     color: white;
-    background-color: #b54c4c;
+    background-color: #4ECC77;
     border-bottom: 1px solid #666;
 }
 
