--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,7 @@
 
     <link rel="stylesheet" href="{{ site.baseurl }}/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/custom.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/code.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/default.css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Inconsolata" rel="stylesheet">
     <script src="{{ site.baseurl }}/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="{{ site.baseurl }}/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
