--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,16 +59,23 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default navbar-static-top" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{{ site.baseurl }}/"><strong>Probabilistic Models</strong> of <strong>Cognition</strong></a>
-        </div>
-      </div>
-
-    </div>
+    {% assign sorted_pages = site.pages | sort:"name" %}
 
     <div class="container">
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">&#9776;</a>
+          <ul class="dropdown-menu">
+            <li><a href="{{ site.baseurl }}/">Home</a></li>
+            <li role="separator" class="divider"></li>
+            {% for p in sorted_pages %}
+            {% if p.layout == 'chapter' %}
+            <li><a href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a></li>
+            {% endif %}
+            {% endfor %}
+          </ul>
+        </li>
+      </ul>
 
       {{ content }}
 
