--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -106,6 +106,11 @@ blockquote em {
     font-family: Inconsolata, monospace;
 }
 
+/* norun */
+.container pre > code {
+    border: none;
+}
+
 .container code {
     color: black;
     border: 1px solid #ddd;
