Show that it's 2nd edition on landing page

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -19,12 +19,33 @@
     font-size: 20px;
 }
 
+
+hr.edition {
+    padding: 0;
+    border: none;
+    border-top: medium double #92E1AC;
+    color: white;
+    text-align: center;
+    width: 650px;
+}
+hr.edition:after {
+    content: "2nd Edition";
+    display: inline-block;
+    position: relative;
+    top: -0.8em;
+    padding: 0 1em;
+    background: #4ECC77;
+    opacity: 1.0;
+}
+
 .ampersand {
     opacity: 0.4
 }
 
 pre#bibtex {
-   display: none;
+    display: none;
+    font-size: 9px;
+    margin-top: 1em;
 }
 
 ul.nav {
@@ -50,5 +71,5 @@ h3 {
 }
 
 .container {
-    width: 840px;
+    width: 850px;
 }
