--- a/_layouts/exercise.html
+++ b/_layouts/exercise.html
@@ -2,18 +2,18 @@
 layout: default
 custom_js:
 - bower_components/KaTeX/dist/katex.min.js
+- bower_components/bigfoot/dist/bigfoot.min.js
+- bower_components/paper/dist/paper-full.js
+- assets/js/parse-bibtex.js
+- assets/js/chapter.js
 
 custom_css:
 - bower_components/KaTeX/dist/katex.min.css
-
-external_js:
-- //s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-v0.9.2.js
-- //s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-editor-1.0.1.js
-- //s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-viz-0.7.6.js
+- bower_components/bigfoot/dist/bigfoot-default.css
 
 external_css:
-- //s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-viz-0.7.6.css
-- //s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-editor-1.0.1.css
+- //s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-viz-0.7.7.css
+- //s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-editor-b3e64d7.css
 ---
 
 <div class="page-header">
@@ -21,3 +21,8 @@ external_css:
 </div>
 
 {{ content }}
+
+<!-- put big scripts at end so we don't block page load -->
+<script src="//s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-v0.9.2.js"></script>
+<script src="//s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-editor-b3e64d7.js"></script>
+<script src="//s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-viz-0.7.7.js"></script>
