Tweak graph-tweaking-button style

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -153,6 +153,10 @@ pre.highlight {
     background-color: transparent
 }
 
+.container .graphComponent .settings {
+    background-color: transparent
+}
+
 .container .wpedit .clearButton {
     padding: 10px;
     border: none;
