Update background color

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -3,6 +3,7 @@
 html {
     background: url(../../assets/img/grey_wash_wall.png);
     background-attachment: fixed;
+    background-color: #626262;
 }
 
 
