--- a/_layouts/exercise.html
+++ b/_layouts/exercise.html
@@ -12,8 +12,8 @@ custom_css:
 - bower_components/bigfoot/dist/bigfoot-default.css
 
 external_css:
-- //s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-viz-0.7.7.css
-- //s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-editor-b3e64d7.css
+- //s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-viz-41e5d24.css
+- //s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-editor-1.0.7.css
 ---
 
 <div class="page-header">
@@ -23,6 +23,6 @@ external_css:
 {{ content }}
 
 <!-- put big scripts at end so we don't block page load -->
-<script src="//s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-v0.9.2.js"></script>
-<script src="//s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-editor-b3e64d7.js"></script>
-<script src="//s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-viz-0.7.7.js"></script>
+<script src="//s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-v0.9.4.js"></script>
+<script src="//s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-editor-1.0.7.js"></script>
+<script src="//s3-us-west-2.amazonaws.com/cdn.webppl.org/webppl-viz-41e5d24.js"></script>
