removed underscore.js dependency. It appears not to be used. At some point in the past, underscore.js was bundled directly into webppl, apparently masking the underscore.js code that was being loaded by default.html. More recent version of webppl replaced underscore.js with lowdash.js, breaking a number of examples in various chapters. Those examples have been rewritten. For information on migrating from underscore.js to lowdash.js, see https://github.com/lodash/lodash/wiki/Migrating

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,10 @@
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Inconsolata" rel="stylesheet">
     <script src="{{ site.baseurl }}/assets/js/ga.js"></script>
     <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/underscore.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
+
+<!--    <script src="{{ site.baseurl }}/assets/js/underscore-min.js"></script> 
+    <script src="https://probmods.org/bower_components/underscore/underscore.js"></script> -->
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
